# polserver

./: .clang-format  .gitattributes  .gitignore  .travis.yml  .travis.yml_  CLAUDE.md  CMakeLists.txt  README.md  Vagrantfile  appveyor.yml  appveyor.yml_  clean.py  doxygen.conf  format.py  hook_helper.bat  install_git_hooks_WIN.vbs  makefile.gcc  mk-redhat-gprof  mk-slackware-openssl  mk.ksh  pol.sln  testFuncRef.src  tiledata.ksy
lib/kaitai-runtime/tests/: CMakeLists.txt  gtest-nano.h  unittest.cpp
pol-core/: .gitignore  AUTHORS  CMakeLists.txt  TERM OF USE AGREEMENT  analyzecore  buildDistWin.bat  buildcore  buildcore32  globalsettings.props  globalsettings.vsprops  makefile.gcc  makefile2.gcc  mk-redhat  mk-slackware  pol-2012.sln  pol-2013.sln  pol-2015.sln  pol-2017.sln  svn_version.h
pol-core/bin-build/: .gitignore  build_linux.sh  build_linux_release.sh  build_tools.sh
pol-core/bscript/: CMakeLists.txt  CMakeSources.cmake  EscriptCompiler.cpp  EscriptCompiler.h  StdAfx.cpp  StdAfx.h  StoredToken.cpp  StoredToken.h  bapplicobj.cpp  bapplicobj.h  barray.cpp  barray.h  basestr.h  basicio.cpp  basicio.h  basicmod.h  bboolean.cpp  bboolean.h  bclassinstance.cpp  bclassinstance.h  bcontinuation.cpp  bcontinuation.h  bcontiter.cpp  bcontiter.h  bdict.cpp  bdict.h  bdouble.cpp  bdouble.h  berror.cpp  berror.h  bfuncref.cpp  bfuncref.h  blong.cpp  blong.h  bobject.cpp  bobject.h  bobjectimp.cpp  bobjectimp.h  bregexp.cpp  bregexp.h  (+92 more)
pol-core/bscript/compiler/: Antlr4Inc.h  Compiler.cpp  Compiler.h  ConsoleReport.cpp  ConsoleReport.h  Profile.h  (+6 more)
pol-core/clib/: .gitignore  CMakeLists.txt  CMakeSources.cmake  Header_Windows.h  MD5.cpp  MD5.h  NTService.cpp  NTService.h  StdAfx.cpp  StdAfx.h  UniqueFile.h  binaryfile.cpp  binaryfile.h  bitutil.h  boostutils.cpp  boostutils.h  cfgelem.h  cfgfile.cpp  cfgfile.h  cfgsect.cpp  cfgsect.h  clib-2008.vcproj  clib-2010.vcxproj  clib-2010.vcxproj.filters  clib-2012.vcxproj  clib-2012.vcxproj.filters  clib-2013.vcxproj  clib-2013.vcxproj.filters  clib-2015.vcxproj  clib-2015.vcxproj.filters  clib-2017.vcxproj  clib.h  clib.vcproj  clib_MD5.cpp  clib_MD5.h  clib_endian.h  clib_utils.cpp  clibopt.h  cmdargs.cpp  cmdargs.h  (+94 more)
pol-core/doc/: CMakeLists.txt  breaking-changes.txt  core-changes.txt  doc-2008.vcproj  doc-2010.vcxproj  doc-2012.vcxproj  doc-2013.vcxproj  doc-2015.vcxproj  doc-2017.vcxproj  doc.vcproj  new-core-changes.txt  packethooks.txt  uoconvert.txt
pol-core/ecompile/: CMakeLists.txt  CMakeSources.cmake  ECompileMain.cpp  ECompileMain.h  EfswFileWatchListener.cpp  EfswFileWatchListener.h  StdAfx.h  ecompile-2008.vcproj  ecompile-2010.vcxproj  ecompile-2012.vcxproj  ecompile-2013.vcxproj  ecompile-2013.vcxproj.filters  ecompile-2015.vcxproj  ecompile-2017.vcxproj  ecompile.cpp  ecompile.rc  ecompile.vcproj  resource.h
pol-core/gp/: gendef.cpp  gp.vcproj  gtree.cpp  tree.h  treegen.cpp
pol-core/nodebin/: .gitignore  CMakeLists.txt  CMakeSources.cmake  NodeMain.cpp  NodeMain.h  StdAfx.h  napi-wrap.h  package.json
pol-core/nodescripts/: CMakeLists.txt  em-parser.jison  main.js  parser.js
pol-core/plib/: CMakeLists.txt  CMakeSources.cmake  RawMap.cpp  RawMap.h  StdAfx.h  WorldChangeReasons.h  clidata.h  filemapserver.cpp  filemapserver.h  fsa.h  inmemorymapserver.cpp  inmemorymapserver.h  mapblob.h  mapblock.h  mapcell.h  mapfunc.cpp  mapfunc.h  mapserver.cpp  mapserver.h  mapshape.h  mapsolid.h  maptile.h  maptileserver.cpp  maptileserver.h  mapwriter.cpp  mapwriter.h  objtype.h  pkg.cpp  pkg.h  plib-2008.vcproj  plib-2010.vcxproj  plib-2010.vcxproj.filters  plib-2012.vcxproj  plib-2012.vcxproj.filters  plib-2013.vcxproj  plib-2013.vcxproj.filters  plib-2015.vcxproj  plib-2017.vcxproj  plib-2017.vcxproj.filters  plib.vcproj  (+46 more)
pol-core/pol/: CMakeLists.txt  CMakeSources.cmake  PolMain.cpp  PolMain.h  StdAfx.cpp  StdAfx.h  account.h  accounts.cpp  acscrobj.cpp  acscrobj.h  action.h  allocd.cpp  allocd.h  anim.h  armor.cpp  armor.h  armrtmpl.h  attack.cpp  attribute.cpp  attributemod.cpp  auxclient.cpp  baseobject.h  binaryfilescrobj.cpp  binaryfilescrobj.h  boat.cpp  boatcomp.cpp  boatemod.h  bowsalut.cpp  cfgemod.h  cfgrepos.cpp  cfgrepos.h  cgdata.cpp  charactr.cpp  charactr.h  checkpnt.cpp  checkpnt.h  chrcast.cpp  clemod.cpp  clemod.h  clfunc.cpp  (+343 more)
pol-core/poltool/: CMakeLists.txt  CMakeSources.cmake  PolToolMain.cpp  PolToolMain.h  StdAfx.h  baredistro.cpp  baredistro.h  baredistrofiles.cpp  genbaredistro.py  genmulti.py  gentiledata.py  poltool-2008.vcproj  poltool-2010.vcxproj  poltool-2012.vcxproj  poltool-2013.vcxproj  poltool-2015.vcxproj  poltool-2017.vcxproj  poltool.cpp  poltool.vcproj  testenv.cpp  testenv.h  testfiles.cpp  testfiles.h
pol-core/runecl/: CMakeLists.txt  CMakeSources.cmake  RunEclMain.cpp  RunEclMain.h  StdAfx.h  runecl-2008.vcproj  runecl-2010.vcxproj  runecl-2012.vcxproj  runecl-2013.vcxproj  runecl-2015.vcxproj  runecl-2017.vcxproj  runecl.cpp  runecl.vcproj
pol-core/support/: CMakeLists.txt  animxlate.cfg  boats.cfg  extobj.cfg  main.js  pol.cfg  pol.cfg.example  scriptloader.js  support-2008.vcproj  support-2010.vcxproj  support-2012.vcxproj  support-2012.vcxproj.filters  support-2013.vcxproj  support-2015.vcxproj  support-2015.vcxproj.filters  support-2017.vcxproj  support-2017.vcxproj.filters  support.vcproj  uoconvert.cfg  wrapper.js
pol-core/uoconvert/: CMakeLists.txt  CMakeSources.cmake  StdAfx.cpp  StdAfx.h  UoConvertMain.cpp  UoConvertMain.h  parallel.h  resource.h  terrainplane.cpp  terrainplane.h  uoconvert-2008.vcproj  uoconvert-2010.vcxproj  uoconvert-2012.vcxproj  uoconvert-2012.vcxproj.filters  uoconvert-2013.vcxproj  uoconvert-2013.vcxproj.filters  uoconvert-2015.vcxproj  uoconvert-2015.vcxproj.filters  uoconvert-2017.vcxproj  uoconvert.cpp  uoconvert.rc  uoconvert.vcproj
pol-core/uotool/: CMakeLists.txt  CMakeSources.cmake  StdAfx.cpp  StdAfx.h  UoToolMain.cpp  UoToolMain.h  uofile04.cpp  uofile05.cpp  uofile2.h  uotool-2008.vcproj  uotool-2010.vcxproj  uotool-2012.vcxproj  uotool-2013.vcxproj  uotool-2015.vcxproj  uotool-2017.vcxproj  uotool.cpp  uotool.vcproj
(+6004 files in other folders)
